  algorithmic complexity attacks. The new limits (MAX_GROUPING_DEPTH=100,
  MAX_GROUPING_TOKENS=10000) can be adjusted or disabled (by setting to None)
  if needed for legitimate large SQL statements.
* Remove shebang from cli.py and remove executable flag (pr818).
* Fix strip_comments not removing all comments when input contains only
  comments (issue801, pr803 by stropysh).


Release 0.5.3 (Dez 10, 2024)
----------------------------

Bug Fixes

* This version introduces a more generalized handling of potential denial of
  service attack (DOS) due to recursion errors for deeply nested statements.
  Brought up and fixed by @living180. Thanks a lot!


Release 0.5.2 (Nov 14, 2024)
----------------------------

Bug Fixes

* EXTENSION is now recognized as a keyword (issue785).
* SQL hints are not removed when removing comments (issue262, by skryzh).


Release 0.5.1 (Jul 15, 2024)
----------------------------

Enhancements

* New "compact" option for formatter. If set, the formatter tries to produce
  a more compact output by avoiding some line breaks (issue783).

Bug Fixes

* The strip comments filter was a bit greedy and removed too much
  whitespace (issue772).
  Note: In some cases you might want to add `strip_whitespace=True` where you
  previously used just `strip_comments=True`. `strip_comments` did some of the
  work that `strip_whitespace` should do.
* Fix error when splitting statements that contain multiple CASE clauses
  within a BEGIN block (issue784).
* Fix whitespace removal with nested expressions (issue782).
* Fix parsing and formatting of ORDER clauses containing NULLS FIRST or
  NULLS LAST (issue532).


Release 0.5.0 (Apr 13, 2024)
----------------------------

Notable Changes

* Drop support for Python 3.5, 3.6, and 3.7.
* Python 3.12 is now supported (pr725, by hugovk).
* IMPORTANT: Fixes a potential denial of service attack (DOS) due to recursion
  error for deeply nested statements. Instead of recursion error a generic