@@ -25,6 +25,8 @@ Bug Fixes
 * Remove shebang from cli.py and remove executable flag (pr818).
 * Fix strip_comments not removing all comments when input contains only
   comments (issue801, pr803 by stropysh).
+* Fix splitting statements with IF EXISTS/IF NOT EXISTS inside BEGIN...END
+  blocks (issue812).
 
 
 Release 0.5.3 (Dez 10, 2024)
